@@ -3368,3 +3368,5 @@
          line ordering (patch #3100707) (Sergio Baldovi).
 20101129 ui/fb/fbdisplay.c: only call fbdisplay_end() when display is
          initialised (fixes bug #3119382) (rkd77).
+20101203 ui/fb/fbdisplay.c: improve fb colour handling and initialise scaler
+         system (fixes bugs #3124787 and #3124788) (rkd77).
